# Beluga-Auto

./: README.md
common/libs/include/common/: parameter.hpp  publisher.hpp
common/libs/include/common/types/: type.h
common/me120_tf/: CMakeLists.txt  package.xml
common/me120_tf/launch/: me120_tf.launch  start_demo.launch  static_tf_publish.launch
common/me120_tf/src/: tf_broadcaster_me120.cpp  tf_echo.cpp
perception/libs/fusion/: CMakeLists.txt  README.md  package.xml
perception/libs/fusion/config/: cam+velodyne.yaml  params.yaml
perception/libs/fusion/data/: water.names
perception/libs/fusion/include/: common.hpp  gencolors.cpp  point_types.h  utils.h
perception/libs/fusion/include/fusions/: fusion.h  image_trans.h  yolov5_d.h
perception/libs/fusion/launch/: demo.launch
perception/libs/fusion/samples/: CMakeLists.txt  fusion_node.cpp
perception/libs/fusion/src/: fusion.cpp  image_trans.cpp  yolov5_d.cpp
perception/libs/roi_filters/include/roi_filters/: roi.hpp
perception/libs/segmenters/: CMakeLists.txt
perception/libs/segmenters/config/: detection.yaml
perception/libs/segmenters/config/kitti/: Segmenter.yaml
perception/libs/segmenters/launch/: demo.launch
perception/libs/segmenters/samples/: detection_node.cpp
perception/libs/tracking/config/: detection.yaml  tracking.yaml
perception/libs/tracking/config/kitti/: Segmenter.yaml  TrackingWorker.yaml
perception/libs/tracking/launch/: demo.launch
perception/libs/tracking/rviz/: demo.rviz
perception/libs/tracking/samples/: detection_node.cpp  tracking_node.cpp
